added main grid with cars and sub grids

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,6 @@
 body{
     background-color: slategrey;
-    background-image: url(../imgs/bi-code-2.jpg);
+    background-image: url(../imgs/cpu1.jpg);
 }
 main{
     color: silver;
