--- a/assets/imgs/css/style.css
+++ b/assets/imgs/css/style.css
@@ -1,7 +1,17 @@
+
 body{
-    background-image: image("../");
+    background-image: url(../cpu1.jpg);
     background-color: slategrey;
 }
-main{
+main{display: flexbox;
+    flex-wrap: wrap;
     color: silver;
+}
+.img-fluid:hover{
+    width: 100%;
+    height: 100% ;
+    border: solid;
+    border-color:steelblue;
+    border-style: solid;
+    border-width: 5px;
 }
