--- a/assets/imgs/css/style.css
+++ b/assets/imgs/css/style.css
@@ -15,3 +15,13 @@ main{display: flexbox;
     border-style: solid;
     border-width: 5px;
 }
+#contactHeader{
+    text-align: center;
+    color: silver;
+    background-color: slategray;
+}
+#contact{
+    background-color: steelblue;
+    border: silver;
+    border-radius: 1%;
+}
