--- a/assets/imgs/css/style.css
+++ b/assets/imgs/css/style.css
@@ -3,9 +3,13 @@ body{
     background-image: url(../cpu1.jpg);
     background-color: slategrey;
 }
-main{display: flexbox;
+main{
+    display: flexbox;
     flex-wrap: wrap;
     color: silver;
+}
+.rowbgc{
+    background-color: steelblue;
 }
 .img-fluid:hover{
     width: 100%;
@@ -15,11 +19,13 @@ main{display: flexbox;
     border-style: solid;
     border-width: 5px;
 }
+/* in contact.html */
 #contactHeader{
     text-align: center;
     color: silver;
     background-color: slategray;
 }
+/* in contact.html */
 #contact{
     background-color: steelblue;
     border: silver;
