added social links row and added links

--- a/assets/imgs/css/style.css
+++ b/assets/imgs/css/style.css
@@ -11,6 +11,10 @@ main{
 .rowbgc{
     background-color: steelblue;
 }
+.nav-link{
+    color: silver;
+    font-weight: bolder;
+}
 .img-fluid:hover{
     width: 100%;
     height: 100% ;
