--- a/assets/imgs/css/style.css
+++ b/assets/imgs/css/style.css
@@ -1,6 +1,8 @@
 
 body{
-    display: flexbox;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
     background-image: url(../cpu1.jpg);
     background-color: slategrey;
 }
