--- a/assets/imgs/css/style.css
+++ b/assets/imgs/css/style.css
@@ -46,3 +46,13 @@ a{
     border: silver;
     border-radius: 1%;
 }
+sticky-footer{
+    position: fixed;
+    bottom: 0px;
+    width: 100%;
+    height: 40px;
+    background-color: rgb(32, 31, 31);
+    padding: 5px;
+    color: silver;
+    text-align: center;
+}
