added @media screen and (max-width: 420px) to css and added contact class to it for better small screen support

--- a/assets/imgs/css/style.css
+++ b/assets/imgs/css/style.css
@@ -70,4 +70,18 @@ sticky-footer{
     color: silver;
     text-align: center;
 }
-
+@media screen and (max-width: 420px) {
+/* adjust contact form to fit mobile screen */
+#contact{
+    display: block;
+    position: relative;
+    left: 25%;
+    background-color: steelblue;
+    border: silver;
+    border-style: groove;
+    border-radius: 1%;
+    max-width: 100%;
+    padding: 5px;
+    float: left;
+}
+}
