--- a/assets/imgs/css/style.css
+++ b/assets/imgs/css/style.css
@@ -59,7 +59,7 @@ a{
     padding: 5px;
     
 }
-/* stickyish */
+/* very stuck */
 sticky-footer{
     position: fixed;
     bottom: 0px;
@@ -73,15 +73,25 @@ sticky-footer{
 @media screen and (max-width: 420px) {
 /* adjust contact form to fit mobile screen */
 #contact{
-    display: block;
+    display: flex;
+    flex-wrap: wrap;
     position: relative;
-    left: 25%;
     background-color: steelblue;
     border: silver;
     border-style: groove;
     border-radius: 1%;
-    max-width: 100%;
+    max-width: 70%;
     padding: 5px;
     float: left;
+}
+sticky-footer{
+    position: fixed;
+    bottom: 0px;
+    width: 100%;
+    height: 60px;
+    background-color: rgb(32, 31, 31);
+    padding: 5px;
+    color: silver;
+    text-align: center;
 }
 }
