--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,7 +6,7 @@ body{
     height: 100%;
     display: flex;
     flex-direction: column;
-    background-image: url(../cpu1.jpg);
+    background-image: url(../imgs/cpu1.jpg);
     background-color: slategrey;
 }
 main{
@@ -31,6 +31,8 @@ a{
 }
 .img-fluid{
     margin: 10px;
+    max-width: 100%;
+    max-height: 300px;
 }
 .img-fluid:hover{
     width: 100%;
