updated links on portfolio and changed link styling with added hover for portfolio links

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -61,6 +61,13 @@ a{
     padding: 5px;
     
 }
+.portLink{
+    color: white;
+    text-align: center;
+}
+.portLink:hover{
+    color: springgreen;
+}
 /* very stuck */
 sticky-footer{
     position: fixed;
